# task_prioritizations

./: README.md  Submission.md  pyproject.toml
api_layer/: dependencies.py  endpoints.py  main.py
backend/: .env  config.py  create_tables.py  database_manager.py  dimension_effort_checker.py  dimension_tables_manager.py  dimension_tables_mapper.py  input_data_reader.py  populate_dimension_tables.py  populate_fact_table.py
backend/models/: __init__.py  priority_table.py
database/: README.md  config.py  main.py
database/data/: data.json
database/helpers/: database_manager.py  dimension_tables_manager.py  dimension_tables_mapper.py  input_data_reader.py
database/models/: __init__.py  base.py  task_table.py  task_view.py  team_table.py  user_table.py
database/scripts/: create_tables.py  create_views.py  populate_dimension_tables.py  populate_fact_table.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css
frontend/src/app/allocations/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/: TaskGrid.tsx  TeamFilter.tsx
frontend/src/types/: index.ts
schemas/: allocation.py  task.py  team.py
service_layer/: allocation_service.py  task_service.py  team_service.py
