[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Hao Wei Lee",email = "hao.lee@bp.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "configparser (>=7.2.0,<8.0.0)",
    "uuid (>=1.30,<2.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [
    { include = "api_layer" },
    { include = "service_layer" },
    { include = "schemas" },
    { include = "database" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
